tests/bad/objects/6.lat
class A {
    int a;
}

class B extends A {
    int b;
}

class C {
    int c;
}

int main ()
{
    A a = new C;

    return 0;
}